<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="20dp"
	app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
	>

	<!-- Username field -->
	<TextView 
		android:id="@+id/label_username"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/label_username"
		android:textSize="20sp"
		/>

	<EditText 
		android:id="@+id/input_username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:hint="@string/label_username"
		/>

	<!-- Email Field -->		
	<TextView 
		android:id="@+id/label_email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/label_email"
		android:textSize="20sp"
		/>

	<EditText 
		android:id="@+id/input_email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:hint="@string/label_email"
		/>

	<!-- Password Field -->
	<TextView 
		android:id="@+id/label_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/label_password"
		android:textSize="20sp"
		/>

	<EditText 
		android:id="@+id/input_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:hint="@string/label_password"
		/>

	<!-- Password Confirm Field -->	
	<TextView 
		android:id="@+id/label_password_confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/label_password_confirm"
		android:textSize="20sp"
		/>

	<EditText 
		android:id="@+id/input_password_confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:hint="@string/label_password_confirm"
		/>


	<Button 
		android:id="@+id/register_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_register"
		android:onClick="onRegister"
		android:layout_centerHorizontal="true"
		/>	
</LinearLayout>	