<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="20dp"
	>

	<!-- Email Field -->
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<android.support.design.widget.TextInputEditText
			android:id="@+id/input_username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/label_username"
			android:inputType="text"
			/>
		
	</android.support.design.widget.TextInputLayout>
	

	<!-- Password Field -->	
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<android.support.design.widget.TextInputEditText
			android:id="@+id/input_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/label_password"
			android:inputType="textPassword"
			/>
		
	</android.support.design.widget.TextInputLayout>
	
	<!-- Login Button -->
	<Button 
		android:id="@+id/loginButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_login"
		android:onClick="onLogin"
		/>	

</LinearLayout>