<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:padding="20dp"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
	>
	
<TextView
	android:id="@+id/text_title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Accounts Repository"
    android:textSize="24sp"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    />

<Button 
	android:id="@+id/button_register"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/button_register"
	android:onClick="onRegister"
	android:layout_centerHorizontal="true"
	android:layout_marginTop="20dp"
	android:layout_margin="15dp"
	android:layout_below="@+id/text_title"
	/>	

<Button 
	android:id="@+id/button_login"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/button_login"
	android:onClick="onLogin"
	android:layout_centerHorizontal="true"
	android:layout_below="@+id/button_register"
	android:layout_margin="15dp"
	/>	

<Button 
	android:id="@+id/button_list_accounts"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/button_list_accounts"
	android:onClick="onListAccounts"
	android:layout_centerHorizontal="true"
	android:layout_below="@+id/button_login"
	android:layout_margin="15dp"
	/>	
</RelativeLayout>

